ajustes para despliegues

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-hooks",
-  "homepage": "https://cswni.github.io/react-app-web-fundamentos/",
+  "homepage": "https://wilmerzel19.github.io/encuentro-10/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
